--- a/css/base.css
+++ b/css/base.css
@@ -44,152 +44,151 @@ p.ref {
 	text-align: center;
 	padding: 2em 1em;
 }
-
-/* Header */
-.codrops-header {
-	margin: 0 auto;
-	padding: 2em;
-	text-align: center;
-	max-width: 900px;
+button#trigger-overlay {
+border: none;
+font-family: inherit;
+font-size: inherit;
+color: inherit;
+background: none;
+cursor: pointer;
+padding: 25px 80px;
+display: inline-block;
+margin: 15px 30px;
+text-transform: uppercase;
+letter-spacing: 1px;
+font-weight: 700;
+outline: none;
+position: relative;
+-webkit-transition: all 0.3s;
+-moz-transition: all 0.3s;
+transition: all 0.3s;
 }
 
-.codrops-header h1 {
-	margin: 0;
-	font-size: 4.5em;
-	line-height: 1;
-	font-weight: 200;
+button#trigger-overlay {
+border-radius: 50px;
+border: 3px solid #fff;
+color: #fff;
+overflow: hidden;
 }
-
-.codrops-header h1 span {
-	display: block;
-	padding: 1em 0 1.5em;
-	font-size: 36%;
-	color: #95a5a6;
-	line-height: 1.4;
+button#trigger-overlay:hover {
+background: rgba(0,0,0,.5);
 }
-
-/* To Navigation Style */
-.codrops-top {
+/* Overlay style */
+.overlay {
+	position: fixed;
 	width: 100%;
-	text-transform: uppercase;
-	font-weight: 700;
-	font-size: 0.69em;
-	text-align: center;
-	padding: 3em 0;
+	height: 100%;
+	top: 0;
+	left: 0;
+	background: rgba(0,0,0,0.9);
+	z-index: 3;
 }
 
-.codrops-top a {
-	display: inline-block;
-	padding: 1.5em;
-	text-decoration: none;
-	letter-spacing: 1px;
-}
-
-.codrops-icon:before {
-	margin: 0 4px;
-	text-transform: none;
-	font-weight: normal;
-	font-style: normal;
-	font-variant: normal;
-	font-family: 'codropsicons';
-	line-height: 1;
-	speak: none;
-	-webkit-font-smoothing: antialiased;
-}
-
-.codrops-icon-drop:before {
-	content: "\e001";
-}
-
-.codrops-icon-prev:before {
-	content: "\e004";
-}
-
-/* Demo Buttons Style */
-.codrops-demos {
-	padding-top: 1em;
-	font-size: 0.8em;
-}
-
-.codrops-demos a {
-	display: inline-block;
-	margin: 0.35em 0.1em;
-	padding: 0.5em 1.2em;
+/* Overlay closing cross */
+.overlay .overlay-close {
+	width: 80px;
+	height: 80px;
+	position: absolute;
+	right: 20px;
+	top: 20px;
+	overflow: hidden;
+	border: none;
+	background: url(../img/cross.png) no-repeat center center;
+	text-indent: 200%;
+	color: transparent;
 	outline: none;
-	text-decoration: none;
-	text-transform: uppercase;
-	letter-spacing: 1px;
-	font-weight: 700;
-	border-radius: 2px;
-	font-size: 110%;
-	border: 2px solid transparent;
+	z-index: 100;
 }
 
-.codrops-demos a:hover,
-.codrops-demos a.current-demo {
-	border-color: #383a3c;
+/* Menu style */
+.overlay nav {
+	text-align: center;
+	position: relative;
+	top: 50%;
+	font-size: 54px;
+	-webkit-transform: translateY(-50%);
+	transform: translateY(-50%);
 }
 
-.codrops-demos h3 {
-	margin: 0;
-	padding: 1em 0 0.5em 0;
-	font-size: 0.9em;
-	float: left;
-	min-width: 90px;
-	clear: left;
-}
-
-.codrops-demos div:not(:first-child) h3 {
-	padding-top: 2em;
-}
-
-.codrops-demos a:hover,
-.codrops-demos a.current-demo {
-	color: inherit;
-	border-color: initial;
-}
-
-/* Related demos */
-.related {
-	padding: 10em 0;
-}
-
-.related p {
-	font-size: 1.5em;
-}
-
-.related > a {
+.overlay ul {
+	list-style: none;
+	padding: 0;
+	margin: 0 auto;
 	display: inline-block;
-	text-align: center;
-	margin: 20px 10px;
-	padding: 25px;
-	vertical-align: middle;
+	height: 100%;
+	position: relative;
+	width: 100%;
 }
 
-.related a img {
-	max-width: 100%;
-	opacity: 0.8;
-	border-radius: 10px;
+.overlay ul li {
+	display: block;
+	height: 20%;
+	height: calc(100% / 5);
+	min-height: 54px;
 }
 
-.related a:hover img,
-.related a:active img {
+.overlay ul li a {
+	font-weight: 300;
+	height: 100px;
+	line-height: 100px;
+	display: block;
+	color: #fff;
+	-webkit-transition: all 500ms ease;
+-moz-transition: all 500ms ease;
+transition: all 500ms ease;
+}
+
+.overlay ul li a:hover,
+.overlay ul li a:focus {
+	background-color: #4EFFFF;
+	color: #000;
+}
+
+/* Effects */
+.overlay-dkm {
+	opacity: 0;
+	visibility: hidden;
+	-webkit-transition: opacity 0.5s, visibility 0s 0.5s;
+	transition: opacity 0.5s, visibility 0s 0.5s;
+}
+
+.overlay-dkm.open {
 	opacity: 1;
+	visibility: visible;
+	-webkit-transition: opacity 0.5s;
+	transition: opacity 0.5s;
 }
 
-.related a h3 {
-	margin: 0;
-	min-height: 63px;
-	padding: 0.5em 0 0.3em;
-	max-width: 300px;
-	text-align: center;
-	font-weight: 400;
-	font-size: 1em;
+.overlay-dkm nav {
+	-webkit-perspective: 1200px;
+	perspective: 1200px;
 }
 
-@media screen and (max-width: 40em) {
+.overlay-dkm nav ul {
+	opacity: 0.4;
+	-webkit-transform: translateY(-25%) rotateX(35deg);
+	transform: translateY(-25%) rotateX(35deg);
+	-webkit-transition: -webkit-transform 0.5s, opacity 0.5s;
+	transition: transform 0.5s, opacity 0.5s;
+}
 
-	.codrops-header h1 {
-		font-size: 2.5em;
+.overlay-dkm.open nav ul {
+	opacity: 1;
+	-webkit-transform: rotateX(0deg);
+	transform: rotateX(0deg);
+}
+
+.overlay-dkm.close nav ul {
+	-webkit-transform: translateY(25%) rotateX(-35deg);
+	transform: translateY(25%) rotateX(-35deg);
+}
+
+@media screen and (max-height: 30.5em) {
+	.overlay nav {
+		height: 70%;
+		font-size: 34px;
+	}
+	.overlay ul li {
+		min-height: 34px;
 	}
 }
