--- a/css/base.css
+++ b/css/base.css
@@ -1,14 +1,3 @@
-@font-face {
-	font-weight: normal;
-	font-style: normal;
-	font-family: 'codropsicons';
-	src:url('../fonts/codropsicons/codropsicons.eot');
-	src:url('../fonts/codropsicons/codropsicons.eot?#iefix') format('embedded-opentype'),
-		url('../fonts/codropsicons/codropsicons.woff') format('woff'),
-		url('../fonts/codropsicons/codropsicons.ttf') format('truetype'),
-		url('../fonts/codropsicons/codropsicons.svg#codropsicons') format('svg');
-}
-
 *, *:after, *:before { -webkit-box-sizing: border-box; box-sizing: border-box; }
 .clearfix:before, .clearfix:after { content: ''; display: table; }
 .clearfix:after { clear: both; }
@@ -45,33 +34,29 @@ p.ref {
 	padding: 2em 1em;
 }
 button#trigger-overlay {
-border: none;
-font-family: inherit;
-font-size: inherit;
-color: inherit;
-background: none;
-cursor: pointer;
-padding: 25px 80px;
 display: inline-block;
-margin: 15px 30px;
-text-transform: uppercase;
-letter-spacing: 1px;
-font-weight: 700;
-outline: none;
-position: relative;
--webkit-transition: all 0.3s;
--moz-transition: all 0.3s;
-transition: all 0.3s;
+min-width: 146px;
+padding: 0 18px;
+-webkit-box-sizing: border-box;
+-moz-box-sizing: border-box;
+box-sizing: border-box;
+font-size: 1em;
+font-weight: bold;
+line-height: 36px;
+text-align: center;
+vertical-align: top;
+white-space: nowrap;
+-webkit-border-radius: 20px;
+border-radius: 20px;
+border: solid 2px #fff;
+background: none;
+color: #fff;
+cursor: pointer;
 }
 
-button#trigger-overlay {
-border-radius: 50px;
-border: 3px solid #fff;
-color: #fff;
-overflow: hidden;
-}
 button#trigger-overlay:hover {
-background: rgba(0,0,0,.5);
+background: #fff;
+color: #11100f;
 }
 /* Overlay style */
 .overlay {
